Tests/Negative/FloatToPointerCast.mr
fun main(): i32 {
    var p: *i32 = 3.14; // Error: Cannot cast f64 to *i32
    return 0;
}
